fdo#47436: Fixed crash while opening odt file.